--- a/package.json
+++ b/package.json
@@ -41,8 +41,14 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "^6.0.0",
     "html-critical-webpack-plugin": "^2.1.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-alter-asset-plugin": "^1.0.0",
+    "html-webpack-inline-chunk-plugin": "^1.1.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "inline-chunk-manifest-html-webpack-plugin": "^2.0.0",
+    "inline-source-cli": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -50,6 +56,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "purgecss-webpack-plugin": "^2.1.2",
+    "react-dev-utils": "^10.2.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "stylelint": "^13.3.3",
