--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config ./webpack.config.js --mode production",
+    "build": "webpack --config ./webpack.min.config.js --mode production",
     "build:dll": "webpack --config ./webpack.dll.config.js --mode production",
     "dev": "webpack-dev-server  --config  ./webpack.dev.config.js --open --mode development"
   },
@@ -16,18 +16,18 @@
     "animate.css": "^3.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "swiper": "^5.3.8",
-    "tailwindcss": "^1.4.4"
+    "swiper": "^5.4.1",
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "add-asset-html-webpack-plugin": "^3.1.3",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -37,8 +37,8 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "file-loader": "^6.0.0",
     "html-critical-webpack-plugin": "^2.1.0",
     "html-loader": "^1.1.0",
@@ -50,22 +50,22 @@
     "inline-chunk-manifest-html-webpack-plugin": "^2.0.0",
     "inline-source-cli": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "purgecss-webpack-plugin": "^2.1.2",
+    "purgecss-webpack-plugin": "^2.2.0",
     "react-dev-utils": "^10.2.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.3.3",
+    "stylelint": "^13.5.0",
     "stylelint-config-standard": "^20.0.0",
-    "svg-url-loader": "^5.0.0",
-    "terser-webpack-plugin": "^3.0.0",
+    "svg-url-loader": "^5.0.1",
+    "terser-webpack-plugin": "^3.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
